--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -38,49 +38,11 @@
     <main class="main">
       <section class="section section--home">
         <h1 class="main__title">Seja bem-vindo à La Creditas Restaurant!</h1>
+        <div class="loader">
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
 
-        <article class="article article--home">
-          <div>
-            <h2 class="article__title">QUESADILLAS</h2>
-            <p class="article__desc"> Nossas incomparáveis tortillas caseiras tostadas e recheadas com queijo derretido e pico de gallo. Acompanha guacamole. </p>
-            <a class="article__link" href="#">Leia Mais</a>
-          </div>
-
-          <picture class="article__picture">
-            <source srcset="image/image.png" />
-            <img src="/image/image.png" alt="prato de comida mexicana" />
-          </picture>
-        </article>
-
-        <article class="article article--home">
-          <div>
-            <h2 class="article__title">FAJITAS</h2>
-            <p class="article__desc">
-              Um dos mais tradicionais pratos da culinária TEX-MEX!" Escolha os recheios, monte seus tacos e desfrute dessa delícia. As fajitas são servidas com nachos, tortillas, frijoles, guacamole,
-              molho sour mex e pico de gallo.
-            </p>
-            <a class="article__link" href="">Leia Mais</a>
-          </div>
-          <picture class="article__picture">
-            <source srcset="image/image1.png" />
-            <img src="/image/image1.png" alt="prato de comida mexicana" />
-          </picture>
-        </article>
-
-        <article class="article article--home">
-          <div>
-            <h2 class="article__title">LOS 3 AMIGOS</h2>
-            <p class="article__desc"
-              >2 Tacos de chili con carne 2 burritos de machaca (Carne Assada Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles, nachos, guacamole e onion crisps.</p
-            >
-            <a class="article__link" href="#">Leia Mais</a>
-          </div>
-
-          <picture class="article__picture">
-            <source srcset="image/image2.jpg" />
-            <img src="/image/image2.jpg" alt="prato de comida mexicana" />
-          </picture>
-        </article>
       </section>
     </main>
 
