--- a/layout-final/premium.html
+++ b/layout-final/premium.html
@@ -29,67 +29,10 @@
     <main class="main main--combo-premium">
       <section class="section section--combo-premium">
         <h1 class="main__title">Combo Premium</h1>
-        <article class="article article--combo-premium">
-          <div>
-            <h2 class="article__title">LOS 3 AMIGOS</h2>
-            <p class="article__desc">
-              2 Tacos de chili con carne 2 burritos de machaca (Carne Assada Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles, nachos, guacamole e onion crisps.
-            </p>
-            <a classs="article__link" href="#">Leia Mais</a>
-          </div>
-
-          <picture class="article__picture">
-            <source srcset="image/image2.jpg" />
-            <img src="/image/imag2.jpg" alt="prato de comida mexicana" />
-          </picture>
-        </article>
-
-        <article class="article article--combo-premium">
-          <div>
-            <h2 class="article__title">LA BUENA ONDA</h2>
-            <p class="article__desc">
-              1 quesadilla com recheio à sua escolha: Queijo, frango marinado, pulled pork ou machaca (Carne Assada Desfiada) 4 taquitos de machaca (Carne Assada Desfiada) 4 tostaditas de frango
-              marinado Acompanham frijoles, nachos, jalapeño e salsa da casa.
-            </p>
-            <a classs="article__link" href="#">Leia Mais</a>
-          </div>
-
-          <picture class="article__picture">
-            <source srcset="image/image6.jpg" />
-            <img src="/image/imag6.jpg" alt="prato de comida mexicana" />
-          </picture>
-        </article>
-
-        <article class="article article--combo-premium">
-          <div>
-            <h2 class="article__title">COMBO DEL MAR</h2>
-            <p class="article__desc">
-              2 Tacos California (peixe empanado, alface, guacamole, sour cream, repolho, cebola roxa e pico de gallo) 4 Tostaditas de camarão com guacamole 4 pedaços de quesadilla de queijo Acompanha
-              salsa da casa.
-            </p>
-            <a classs="article__link" href="#">Leia Mais</a>
-          </div>
-          <picture class="article__picture">
-            <source srcset="image/image7.jpg" />
-            <img src="/image/imag7.jpg" alt="prato de comida mexicana" />
-          </picture>
-        </article>
-
-        <article class="article article--combo-premium">
-          <div>
-            <h2 class="article__title">LA FRONTERA</h2>
-            <p class="article__desc">
-              Os dois lados da fronteira em um delicioso combo.
-              <br />LADO TEX: 4 mini burgers, batatas chips, onion crisps e molho barbecue. <br />LADO MEX: 4 Chili tacos, nachos, jalapeño e guacamole.
-            </p>
-            <a classs="article__link" href="#">Leia Mais</a>
-          </div>
-
-          <picture class="article__picture">
-            <source srcset="image/image8.jpg" />
-            <img src="/image/imag8.jpg" alt="prato de comida mexicana" />
-          </picture>
-        </article>
+        <div class="loader">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
       </section>
 
       <aside class="aside">
